--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </li>
                 <li class="nav__item">
                     <a href="#about" class="nav__link">
-                        <i class="uil uil-user nav__icon"></i>A propos
+                        <i class="uil uil-user nav__icon"></i>À propos
                     </a>
                 </li><li class="nav__item">
                     <a href="#skills" class="nav__link">
@@ -124,7 +124,7 @@
 
     <!--A propos-->
 <section class="about section" id="about">
-    <h2 class="section__title">A propos de moi</h2>
+    <h2 class="section__title">À propos de moi</h2>
     <span class="section__subtitle">Ma présentation</span>
 
     <div class="about__container grid">
