--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <h3 class="home__subtitle">Futur développeur web</h3>
                     <p class="home__description">Je suis actuellement en formation de développeur web chez OpenClassrooms (bac+2)
                          et je recherche une alternance.</p>
-                    <a href="contact" class="button button--flex">
+                    <a href="#contact" class="button button--flex">
                         Contactez-moi<i class="uil uil-message button__icon"></i>
                     </a>
                 </div>
