--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                 <div class="portfolio__data">
 
                     <h3 class="portfolio__title">Site de vente de chaussures</h3>
-                    <p class="portfolio_description">Site internet de vente de chaussure moderne que j'ai réalisé qui comprend des animations.</p>
+                    <p class="portfolio_description">Site internet moderne de vente de chaussure que j'ai réalisé et qui comprend des animations.</p>
                     <a href="https://losfouchos.github.io/portefolio/" class="button button--flex button--small portfolio__button">
                         Démo
                         <i class="uil uil-arrow-right button__icon"></i>
