--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
                 <div>
                     <h3 class="contact__title">Appelez-moi</h3>
-                    <span class="contact__subtitle">06 04 14 27 08</span>
+                    <span class="contact__subtitle">+33 6 04 14 27 08</span>
                 </div>
             </div>
 
