--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./style.css">
 
 
-    <title>Tahina Foucher</title>
+    <title>Tahina Hugo Foucher</title>
 
     
 </head>
