--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <header class="header" id="header">
     <nav class="nav container">
-        <a href="#" class="nav__logo">Tahina</a>
+        <a href="#" class="nav__logo">Tahina Hugo</a>
 
         <div class="nav__menu" id="nav-menu">
             <ul class="nav__list grid">
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="home__data">
-                    <h1 class="home__title">Bonjour, moi c'est Tahina !</h1>
+                    <h1 class="home__title">Bonjour, moi c'est Tahina Hugo !</h1>
                     <h3 class="home__subtitle">Futur développeur web</h3>
                     <p class="home__description">Je suis actuellement en formation de développeur web chez OpenClassrooms (bac+2)
                          et je recherche une alternance.</p>
@@ -138,7 +138,7 @@
                 motivé, sérieux, souriant, déterminé et qui s’intègre très facilement à une équipe.</p>
                 </div>
             <div class="about__buttons">
-                <a download="" href="./pdf/CV_Foucher_Tahina.pdf" class="button button--flex">
+                <a download="" href="./pdf/Tahina_Hugo_Foucher_CV.pdf" class="button button--flex">
                     Téléchargez mon CV !<i class="uil uil-download-alt button__icon"></i>
                 </a>
 
