--- a/index.html
+++ b/index.html
@@ -131,11 +131,12 @@
         <img src="./img/about.jpg" alt="" class="about__img">
 
         <div class="about__data">
-            <p class="about__description">Actuellement en formation développeur web avec OpenClassrooms, je suis à la recherche
-                d’une alternance dans le cadre de ma formation. Je suis diplômé d’un baccalauréat S section
-                espagnol européen et je suis depuis quelques temps passionné par le développement web. J’ai donc
-                décidé d’intégrer cette formation pour faire de cette passion mon métier. Je suis quelqu’un de
-                motivé, sérieux, souriant, déterminé et qui s’intègre très facilement à une équipe.</p>
+            <p class="about__description">Actuellement en Bachelor Développement web à l'ISCOD, je suis à la recherche
+                d’une alternance, en contrat d'aprentissage, d'une durée de deux années dans le cadre de ma formation.
+                Je suis diplômé d’un baccalauréat S sectionespagnol européen et je suis depuis quelques temps passionné
+                par le développement web. J’ai donc décidé d’intégrer cette formation pour faire de cette passion mon 
+                métier. Je suis quelqu’un de motivé, sérieux, souriant, déterminé et qui s’intègre très facilement à 
+                une équipe.</p>
                 </div>
             <div class="about__buttons">
                 <a download="" href="./pdf/Tahina_Hugo_Foucher_CV.pdf" class="button button--flex">
