--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
                     <!--parcour 1-->
                     <div class="parcour__data">
                         <div>
-                            <h3 class="parcour__title">Formation de développeur web</h3>
-                            <span class="parcour__subtitle">OpenClassrooms</span>
+                            <h3 class="parcour__title">Bachelor développement web</h3>
+                            <span class="parcour__subtitle">ISCOD</span>
                             <div class="parcour__calendar">
                                 <i class="uil uil-calendar-alt"></i>
                                 2022
@@ -231,7 +231,7 @@
                             <span class="parcour__subtitle">Glacier d'Anaïs - Saint-Gilles-Croix-de-Vie</span>
                             <div class="parcour__calendar">
                                 <i class="uil uil-calendar-alt"></i>
-                                2019-2021
+                                2019-2022
                             </div>
                         </div>
 
