--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Bonjour, moi c'est Tahina Hugo !</h1>
                     <h3 class="home__subtitle">Futur développeur web</h3>
-                    <p class="home__description">Je suis actuellement en formation de développeur web chez OpenClassrooms (bac+2)
+                    <p class="home__description">Je suis actuellement en Bachelor développement web à l'ISCOD.
                          et je recherche une alternance.</p>
                     <a href="#contact" class="button button--flex">
                         Contactez-moi<i class="uil uil-message button__icon"></i>
